# ipc_recommender

./: .gitignore  Dockerfile  constants.py  main.py  models.py  pyproject.toml  requirements.txt  vector_store.py
